--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "npm": ">=8"
   },
   "scripts": {
+    "b": "rollup -c",
     "build": "rimraf dist && rollup -c",
     "start": "rollup -c -w",
     "test": "run-s test:lint test:unit",
@@ -56,13 +57,18 @@
     "deploy": "gh-pages -d example/build",
     "create": "plop --plopfile ./.plop/plop.config.cjs",
     "release": "semantic-release",
-    "lint": "eslint './src/**/*.ts' --fix"
+    "lint": "eslint './src/**/*.ts' --fix",
+    "t": "jest"
   },
   "peerDependencies": {
     "react": ">=16.0.0",
     "react-dom": ">=16.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
+    "@babel/plugin-transform-runtime": "^7.23.4",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@craco/craco": "^7.1.0",
     "@rollup/plugin-commonjs": "^25.0.3",
     "@rollup/plugin-terser": "^0.4.3",
@@ -95,6 +101,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-plugin-unicorn": "41.0.1",
     "gh-pages": "^2.2.0",
+    "jest": "27.4.3",
     "plop": "^3.1.0",
     "prettier": "^3.0.0",
     "react": "^17.0.0",
