feat: add cache

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "t:needs": "jest src/hooks/needs/needs.test.ts",
     "t:https": "jest src/hooks/https/https.test.ts",
     "t:store": "jest src/core/store/store.test.ts",
-    "t:mes": "jest src/hooks/messages/messages.test.ts"
+    "t:mes": "jest src/hooks/messages/messages.test.ts",
+    "t:cache": "jest src/hooks/cache/cache.test.ts"
   },
   "peerDependencies": {
     "react": "16 || 17 || 18",
