feat: add validation requests

--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "t:https": "jest src/hooks/https/https.test.ts",
     "t:store": "jest src/core/store/store.test.ts",
     "t:mes": "jest src/hooks/messages/messages.test.ts",
-    "t:cache": "jest src/hooks/cache/cache.test.ts"
+    "t:cache": "jest src/hooks/cache/cache.test.ts",
+    "t:loader": "jest src/hooks/loader/loader.test.ts",
+    "t:diff": "jest src/utils/diff.test.ts"
   },
   "peerDependencies": {
     "react": "16 || 17 || 18",
