--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "t:timer": "jest src/hooks/timer/timer.test.ts"
   },
   "peerDependencies": {
-    "react": "16 || 17 || 18",
-    "react-dom": "16 || 17 || 18"
+    "react": "16 || 17 || 18 || 19",
+    "react-dom": "16 || 17 || 18 || 19"
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.23.4",
