fix: disable deploy example

--- a/package.json
+++ b/package.json
@@ -11,14 +11,8 @@
     "hook",
     "library",
     "admin",
-    "toast",
-    "message",
-    "useToast",
-    "useMessage",
-    "loader",
-    "useLoader",
-    "useTimer",
-    "timer"
+    "manager",
+    "state"
   ],
   "type": "module",
   "module": "dist/index.modern.js",
@@ -26,29 +20,17 @@
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
   "scripts": {
-    "b": "rollup -c",
     "build": "rimraf dist && rollup -c",
     "start": "rollup -c -w",
     "test": "run-s test:lint test:unit",
     "test:lint": "eslint './src/**/*.ts'",
     "test:unit": "jest",
-    "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && yarn build",
     "deploy": "gh-pages -d example/build",
-    "create": "plop --plopfile ./.plop/plop.config.cjs",
+    "plop": "plop --plopfile ./.plop/plop.config.cjs",
     "release": "semantic-release",
     "lint": "eslint './src/**/*.ts' --fix",
-    "test:old": "cross-env CI=1 craco test --env=jsdom",
-    "t:needs": "jest src/hooks/needs/needs.test.ts",
-    "t:https": "jest src/hooks/https/https.test.ts",
-    "t:store": "jest src/core/store/store.test.ts",
-    "t:mes": "jest src/hooks/messages/messages.test.ts",
-    "t:cache": "jest src/hooks/cache/cache.test.ts",
-    "t:loader": "jest src/hooks/loader/loader.test.ts",
-    "t:diff": "jest src/utils/diff.test.ts",
-    "t:notifications": "jest src/hooks/notifications/notifications.test.ts",
-    "t:timer": "jest src/hooks/timer/timer.test.ts",
-    "t:scenarios": "jest src/hooks/scenarios/scenarios.test.ts"
+    "t:needs": "jest src/hooks/needs/needs.test.ts"
   },
   "peerDependencies": {
     "react": "16 || 17 || 18 || 19",
@@ -59,7 +41,6 @@
     "@babel/plugin-transform-runtime": "^7.23.4",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@craco/craco": "^7.1.0",
     "@rollup/plugin-commonjs": "^25.0.3",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.3",
@@ -96,7 +77,6 @@
     "prettier": "^3.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-scripts": "^5.0.0",
     "react-test-renderer": "^17.0.0",
     "rollup": "^3.26.3",
     "rollup-plugin-bundle-analyzer": "^1.6.6",
